--- a/portofolio/css/style.css
+++ b/portofolio/css/style.css
@@ -67,3 +67,11 @@ footer {
     text-align: center;
     padding: 10px;
 }
+
+
+@media screen  and (max-width: 750px){
+    main {
+        grid-template-columns: 1fr;
+       height: auto;
+    }
+}
