--- a/portofolio/css/style.css
+++ b/portofolio/css/style.css
@@ -1,56 +1,3 @@
-
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-header {
-    background-color: #082509;
-    color: white;
-    padding: 10px;
-    text-align: center;
-}
-
-header nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-header nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-
-header nav ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-main {
-    display: grid;
-    grid-template-columns: 3fr 1fr; 
-    gap: 20px;
-    padding: 20px;
-    border: 2px solid rgb(63, 43, 13);
-    min-height: 50vh;
-    height: auto; 
-    text-align: center;
-}
-
-main.full-width {
-    grid-template-columns: 1fr; 
-}
-
-.header {
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    background-color: #082509;
-    color: white;
-    text-align: center;
-    padding: 1px;
-}
-
 .content {
     background-color: beige;
     padding: 10px;
@@ -64,24 +11,11 @@ main.full-width {
     border: 2px solid rgb(63, 43, 13);
 }
 
-footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #082509;
-    color: white;
-    text-align: center;
-}
-
 .img {
-    height: 150px;
+    height: auto;
+    max-width: 100%;
 }
 
-@media screen and (max-width: 750px) {
-    main {
-        grid-template-columns: 1fr;
-        min-height: 50vh; 
-        height: auto;
-    }
+.box1{
+height: 800px;
 }
